third_party/move/move-compiler-v2/tests/checking/typing/uninferred_type_unpack_assign.exp

Diagnostics:
error: unable to infer instantiation of type `S<_2>` (consider providing type arguments or annotating the type)
  ┌─ tests/checking/typing/uninferred_type_unpack_assign.move:5:15
  │
5 │         S{} = S{};
  │               ^^^
